[package]
name = "dstruct"
version = "0.1.0"
authors = ["max <mx.sht06@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4"
rand = { version = "0.8", features = ["small_rng"] }
ordered-float = "2.7"
